WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196522
REGRESSION (
r238266
): Exchange 2013 Outlook Web Access displays partially blank page when creating new e-mail
https://bugs.webkit.org/show_bug.cgi?id=196522
Summary
REGRESSION (r238266): Exchange 2013 Outlook Web Access displays partially bla...
Simon Fraser (smfr)
Reported
2019-04-02 18:39:13 PDT
REGRESSION (
r238266
): Exchange 2013 Outlook Web Access displays partially blank page when creating new e-mail
Attachments
Patch
(6.57 KB, patch)
2019-04-02 18:41 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-04-02 18:41:38 PDT
Created
attachment 366565
[details]
Patch
Simon Fraser (smfr)
Comment 2
2019-04-02 18:41:40 PDT
<
rdar://problem/49472941
>
WebKit Commit Bot
Comment 3
2019-04-02 21:20:29 PDT
Comment on
attachment 366565
[details]
Patch Clearing flags on attachment: 366565 Committed
r243786
: <
https://trac.webkit.org/changeset/243786
>
WebKit Commit Bot
Comment 4
2019-04-02 21:20:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug